--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,34 +1,28 @@
-/* 1. Set a background image */
 .banner {
-    background-image:
-      /* Transparent gradient above */
-      linear-gradient(-225deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.1) 50%),
-      /* Then image below */
-      url('../../images/background.jpeg');
-    /* 2. Make the background image cover the banner div */
-    background-size: cover;
-    /* 3. Center the image */
-    background-position: center;
-  
-    height: 25em; /* Adjust the height as needed */
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start; /* Move h1 to the top of the banner */
-  }
-  
-  .banner h1 {
-    padding-top: 0; /* Remove padding-top to move h1 to the top */
-    color: white;
-    font-size: 120px;
-  }
-  
-  .banner h2 {
-    background-color: rgba(0, 0, 0, 0);
-    margin-top: 2em; /* Adjust the margin as needed */
-    margin-bottom: 2em; /* Adjust the margin as needed */
-    color: white;
-    font-size: 40px;
-    font-weight: lighter;
-    opacity: 0.8;
-  }
-  
+  background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.1)), url('../../images/background.jpeg');
+  background-size: cover;
+  background-position: center;
+  height: 25em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+}
+
+.banner h1 {
+  padding-top: 0;
+  color: white;
+  font-size: 120px;
+}
+
+.banner h2 {
+  background-color: rgba(0, 0, 0, 0);
+  margin-top: 1em;
+  margin-bottom: 1em;
+  color: white;
+  font-size: 34px;
+  font-weight: normal;
+  padding: 10px;
+  border-radius: 5px;
+}
